archive/rotateNew/error.log
    Checking rotate_demo v0.1.0 (C:\Users\USER\OneDrive\Desktop\Irak\rustV10\rotateNew)
error[E0308]: mismatched types
  --> src\main.rs:43:50
   |
43 |                 .inner_margin(egui::Margin::same(20.0))
   |                               ------------------ ^^^^ expected `i8`, found floating-point number
   |                               |
   |                               arguments to this function are incorrect
   |
note: associated function defined here
  --> C:\Users\USER\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\epaint-0.31.1\src\margin.rs:33:18
   |
33 |     pub const fn same(margin: i8) -> Self {
   |                  ^^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `rotate_demo` (bin "rotate_demo") due to 1 previous error
